7159772: instanceKlass::all_fields_count() returns incorrect total field count

Fix instanceKlass::all_fields_count() bug.

Reviewed-by: kvn, never